[package]
name = "aimd_next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
reqwest = { version = "0.11.20", features = ["blocking"] }
# bzip2-rs = "0.1.2"
bzip2 = "0.4"
console = "0.15.7"
winreg = "0.51.0"